--- a/index.html
+++ b/index.html
@@ -2,48 +2,92 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Navegação Estilo Google Maps</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<title>Mapa de Clientes - Google Maps</title>
 
 <style>
-    #map {
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        top: 0;
-        left: 0;
+    body,html{
+        margin:0;
+        padding:0;
+        height:100%;
+        width:100%;
+        font-family:sans-serif;
+    }
+    #map{
+        height:100%;
+        width:100%;
+        position:absolute;
+        top:0;left:0;
     }
 
-    /* Marcador HTML */
-    .marker-wrapper {
-        width: 40px;
-        height: 40px;
+    .map-control{
+        position:fixed;
+        top:90px;
+        right:20px;
+        display:flex;
+        flex-direction:column;
+        gap:10px;
+        z-index:9999;
+    }
+
+    .control-btn{
+        width:48px;
+        height:48px;
+        border-radius:50%;
+        border:none;
+        background:white;
+        box-shadow:0 2px 6px rgba(0,0,0,0.3);
+        font-size:18px;
+        cursor:pointer;
+    }
+
+    .control-btn:active{
+        transform:scale(.9);
+    }
+
+    .location-marker {
+        width: 20px;
+        height: 20px;
+        background: #4285f4;
+        border: 3px solid white;
+        border-radius: 50%;
+        box-shadow: 0 2px 6px rgba(0,0,0,0.4);
         position: relative;
     }
 
-    .location-dot {
-        width: 22px;
-        height: 22px;
-        background: #1a73e8;
-        border-radius: 50%;
-        border: 4px solid white;
+    .location-marker::after {
+        content: '';
         position: absolute;
-        top: 10px;
-        left: 10px;
-        box-shadow: 0 2px 6px rgba(0,0,0,0.4);
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 8px;
+        height: 8px;
+        background: white;
+        border-radius: 50%;
     }
 
-    .direction-arrow {
-        width: 0;
-        height: 0;
-        border-left: 8px solid transparent;
-        border-right: 8px solid transparent;
-        border-bottom: 18px solid white;
-        position: absolute;
-        top: -4px;
-        left: 50%;
-        transform: translateX(-50%);
-        filter: drop-shadow(0 0 4px rgba(0,0,0,0.4));
+    @keyframes pulse {
+        0% { box-shadow: 0 0 0 0 rgba(66,133,244,0.7); }
+        70% { box-shadow: 0 0 0 10px rgba(66,133,244,0); }
+        100% { box-shadow: 0 0 0 0 rgba(66,133,244,0); }
+    }
+
+    .location-marker.active {
+        animation: pulse 2s infinite;
+    }
+
+    @media (max-width: 768px) {
+        .map-control {
+            top: 70px;
+            right: 10px;
+        }
+
+        .control-btn {
+            width: 44px;
+            height: 44px;
+            font-size: 16px;
+        }
     }
 </style>
 </head>
@@ -51,157 +95,238 @@
 
 <div id="map"></div>
 
+<!-- BOTÕES -->
+<div class="map-control">
+    <button id="btnToggle3D" class="control-btn">3D</button>
+    <button id="btnCenterUser" class="control-btn">📍</button>
+</div>
+
+<!-- Supabase -->
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
+<script>
+    const SUPABASE_URL = "https://fufteldeapyvluynppuv.supabase.co";
+    const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImZ1ZnRlbGRlYXB5dmx1eW5wcHV2Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQ2MzAyMzIsImV4cCI6MjA4MDIwNjIzMn0.xr6PiskP8cJUzGBEhp_tAfZWMprxJXJyhLuOSmCQleA";
+
+    const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+</script>
+
 <!-- Google Maps -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyApaDb9rSw2sNTaY7fjBqmrgjWYD9xwjcU&callback=initMap&v=beta" async defer></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyApaDb9rSw2sNTaY7fjBqmrgjWYD9xwjcU&callback=initMap&v=beta&libraries=places" async defer></script>
 
 <script>
 let map;
-let userMarker;
-let watchId;
-let currentHeading = 0; // heading real
-let canUseGyro = false;
+let is3D = false;
+let userLocationMarker = null;
+let watchId = null;
+let _animating3D = false;
 
-/* ================================
-   PERMISSÃO DO GIROSCÓPIO (Android)
-================================ */
-function enableGyroscope() {
-    if (typeof DeviceOrientationEvent !== "undefined" &&
-        typeof DeviceOrientationEvent.requestPermission === "function") {
+const MAP_ID = "ebb7ca4503045feabc75b373";
 
-        DeviceOrientationEvent.requestPermission()
-            .then(response => {
-                if (response === "granted") {
-                    canUseGyro = true;
-                    window.addEventListener("deviceorientation", handleOrientation);
-                    console.log("Giroscópio ativado!");
-                } else {
-                    console.log("Usuário negou o giroscópio");
-                }
-            })
-            .catch(console.error);
-    } else {
-        // Chrome Desktop ou navegador sem permissão especial
-        canUseGyro = true;
-        window.addEventListener("deviceorientation", handleOrientation);
-    }
-}
-
-/* =============== HÁNDLING DO GIROSCÓPIO ================== */
-function handleOrientation(event) {
-    if (!canUseGyro) return;
-
-    // event.alpha = rotação do celular em graus (0–360)
-    if (event.alpha != null) {
-        currentHeading = event.alpha; // mais preciso que GPS
-        rotateMarker(currentHeading);
-        map.setHeading(currentHeading);
-    }
-}
-
-/* ================================
-   CRIA MARCADOR HTML
-================================ */
-function createHtmlMarker() {
-    const div = document.createElement("div");
-    div.className = "marker-wrapper";
-
-    const dot = document.createElement("div");
-    dot.className = "location-dot";
-
-    const arrow = document.createElement("div");
-    arrow.className = "direction-arrow";
-
-    div.appendChild(dot);
-    div.appendChild(arrow);
-
-    return div;
-}
-
-/* ================================
-   ROTACIONAR SETA
-================================ */
-function rotateMarker(deg) {
-    if (!userMarker) return;
-
-    const markerDiv = userMarker.getIcon().element;
-    if (!markerDiv) return;
-
-    const arrow = markerDiv.querySelector(".direction-arrow");
-    if (arrow) {
-        arrow.style.transform = `translateX(-50%) rotate(${deg}deg)`;
-    }
-}
-
-/* ================================
-   INICIAR MAPA
-================================ */
-function initMap() {
+window.initMap = function () {
     map = new google.maps.Map(document.getElementById("map"), {
-        center: {lat: -23.55, lng: -46.63},
-        zoom: 18,
-        tilt: 60,
-        heading: 0,
-        mapId: "ebb7ca4503045feabc75b373",
-        gestureHandling: "greedy"
+        center:{lat:-23.5505,lng:-46.6333},
+        zoom:17,
+        mapId:MAP_ID,
+        tilt:0,
+        heading:0,
+        gestureHandling:"greedy",
+        rotateControl:true,
+        zoomControl:true,
+        streetViewControl:false,
+        fullscreenControl:true
     });
 
-    enableGyroscope();
-    startGPS();
+    startLocationTracking();
 }
 
-/* ================================
-   INICIAR GPS
-================================ */
-function startGPS() {
-    if (!navigator.geolocation) {
-        console.log("Geolocalização não suportada.");
+/* ============
+   LERP SUAVE
+   ============ */
+
+function lerp(start, end, t) {
+    return start + (end - start) * t;
+}
+
+/* ============
+   MOVIMENTO SUAVIZADO
+   ============ */
+
+function animateMarkerTo(marker, newPos, duration = 600) {
+    if (!marker.position) {
+        marker.setPosition(newPos);
         return;
     }
 
-    navigator.geolocation.getCurrentPosition(pos => {
-        const lat = pos.coords.latitude;
-        const lng = pos.coords.longitude;
+    const startLat = marker.position.lat();
+    const startLng = marker.position.lng();
+    const endLat = newPos.lat();
+    const endLng = newPos.lng();
 
-        const htmlMarker = createHtmlMarker();
+    const startTime = performance.now();
 
-        userMarker = new google.maps.marker.AdvancedMarkerElement({
-            map,
-            position: {lat, lng},
-            content: htmlMarker
+    function update(time) {
+        const progress = Math.min((time - startTime) / duration, 1);
+        const lat = lerp(startLat, endLat, progress);
+        const lng = lerp(startLng, endLng, progress);
+
+        const interpolated = new google.maps.LatLng(lat, lng);
+
+        if (marker.setPosition) {
+            marker.setPosition(interpolated);
+        } else {
+            marker.position = interpolated;
+        }
+
+        if (progress < 1) {
+            requestAnimationFrame(update);
+        }
+    }
+
+    requestAnimationFrame(update);
+}
+
+/* ===========================
+   RASTREAMENTO EM TEMPO REAL
+   =========================== */
+
+function startLocationTracking() {
+    if (!navigator.geolocation) {
+        alert("Seu navegador não suporta geolocalização.");
+        return;
+    }
+
+    const markerDiv = document.createElement('div');
+    markerDiv.className = 'location-marker active';
+
+    const geoOptions = {
+        enableHighAccuracy: true,
+        timeout: 7000,
+        maximumAge: 0
+    };
+
+    navigator.geolocation.getCurrentPosition(
+        pos => {
+            const c = { lat: pos.coords.latitude, lng: pos.coords.longitude };
+
+            map.setCenter(c);
+            map.setZoom(17);
+
+            if (google.maps.marker?.AdvancedMarkerElement) {
+                userLocationMarker = new google.maps.marker.AdvancedMarkerElement({
+                    map,
+                    position: c,
+                    content: markerDiv,
+                    title: "Sua Localização"
+                });
+            } else {
+                userLocationMarker = new google.maps.Marker({
+                    map,
+                    position: c,
+                    title: "Sua Localização",
+                    icon: {
+                        path: google.maps.SymbolPath.CIRCLE,
+                        scale: 8,
+                        fillColor: "#4285f4",
+                        fillOpacity: 1,
+                        strokeColor: "white",
+                        strokeWeight: 3
+                    }
+                });
+            }
+
+            watchId = navigator.geolocation.watchPosition(updateUserLocation, handleGeoError, geoOptions);
+        },
+        handleGeoError,
+        geoOptions
+    );
+}
+
+function updateUserLocation(position) {
+    const newPos = new google.maps.LatLng(
+        position.coords.latitude,
+        position.coords.longitude
+    );
+
+    if (!userLocationMarker) return;
+
+    // AGORA MOVIMENTO SUAVE (Google Maps style)
+    animateMarkerTo(userLocationMarker, newPos, 600);
+}
+
+function handleGeoError(error) {
+    console.warn("Erro de geolocalização:", error);
+    alert("Não foi possível acessar sua localização. Ative o GPS e recarregue.");
+    map.setCenter({ lat:-23.5505, lng:-46.6333 });
+}
+
+/* ===========================
+   CENTRALIZAR USUÁRIO
+   =========================== */
+
+function centerOnUser() {
+    if (!userLocationMarker || !userLocationMarker.position) {
+        alert("Aguardando localização GPS...");
+        return;
+    }
+
+    map.panTo(userLocationMarker.position);
+    map.setZoom(17);
+}
+
+document.getElementById("btnCenterUser").onclick = centerOnUser;
+
+/* ===========================
+   ANIMAÇÃO 2D ⇄ 3D
+   =========================== */
+
+function animateValue(start, end, duration, onUpdate, onFinish){
+    const startTime = performance.now();
+
+    function frame(time){
+        const progress = Math.min((time - startTime) / duration, 1);
+        const value = start + (end - start) * progress;
+
+        onUpdate(value);
+
+        if(progress < 1){
+            requestAnimationFrame(frame);
+        } else {
+            if (onFinish) onFinish();
+        }
+    }
+
+    requestAnimationFrame(frame);
+}
+
+document.getElementById("btnToggle3D").onclick = () => {
+
+    if (_animating3D) return;
+    _animating3D = true;
+
+    if (!is3D) {
+        is3D = true;
+        btnToggle3D.textContent = "2D";
+
+        animateValue(map.getTilt(), 67, 600, val => map.setTilt(val));
+        animateValue(map.getHeading(), 45, 600, val => map.setHeading(val), () => {
+            _animating3D = false;
         });
 
-        map.setCenter({lat, lng});
+    } else {
+        is3D = false;
+        btnToggle3D.textContent = "3D";
 
-        watchId = navigator.geolocation.watchPosition(updatePosition, err => {
-            console.log("Erro no GPS:", err);
-        }, { enableHighAccuracy: true });
-
-    }, err => {
-        console.log("Erro ao iniciar GPS:", err);
-    });
-}
-
-/* ================================
-   ATUALIZA POSIÇÃO SUAVEMENTE
-================================ */
-function updatePosition(pos) {
-
-    const lat = pos.coords.latitude;
-    const lng = pos.coords.longitude;
-
-    const newPos = { lat, lng };
-
-    // Atualiza o mapa e marcador
-    userMarker.position = newPos;
-    map.panTo(newPos);
-
-    // Usa heading do GPS APENAS se giroscópio estiver indisponível
-    if (!canUseGyro && pos.coords.heading != null) {
-        currentHeading = pos.coords.heading;
-        rotateMarker(currentHeading);
-        map.setHeading(currentHeading);
+        animateValue(map.getTilt(), 0, 600, val => map.setTilt(val));
+        animateValue(map.getHeading(), 0, 600, val => map.setHeading(val), () => {
+            _animating3D = false;
+        });
     }
-}
+};
+
+window.addEventListener('beforeunload', () => {
+    if (watchId) navigator.geolocation.clearWatch(watchId);
+});
 </script>
 
 </body>
