--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         top:0;left:0;
     }
 
-    /* BOTÕES */
+    /* botões */
     .map-control{
         position:fixed;
         top:90px;
@@ -33,7 +33,6 @@
         gap:10px;
         z-index:9999;
     }
-
     .control-btn{
         width:48px;
         height:48px;
@@ -45,41 +44,35 @@
         cursor:pointer;
     }
 
-    .control-btn:active{
-        transform:scale(.9);
-    }
-
-    /* MARCADOR HTML (VERMELHO + SETA) */
-    .marker-wrapper{
+    /* === 🔵 MARCADOR OFICIAL DO GOOGLE MAPS === */
+    .gm-blue-dot-wrapper {
         width:40px;
         height:40px;
         position:relative;
-        transform: translate(-50%, -50%);
+        transform:translate(-50%,-50%);
     }
 
-    .location-dot{
+    .gm-blue-dot {
         width:22px;
         height:22px;
-        background:#e53935;   /* vermelho */
+        background:#1a73e8;           /* azul padrão Google */
         border-radius:50%;
-        border:4px solid white;
+        border:4px solid #ffffff;     /* borda branca */
         position:absolute;
-        top:10px;
+        top:9px;
         left:9px;
         box-shadow:0 2px 6px rgba(0,0,0,.5);
     }
 
-    .direction-arrow{
-        width:0;
-        height:0;
-        border-left:6px solid transparent;
-        border-right:6px solid transparent;
-        border-bottom:14px solid white;
+    .gm-blue-center {
+        width:8px;
+        height:8px;
+        background:white;
+        border-radius:50%;
         position:absolute;
-        top:-2px;
+        top:50%;
         left:50%;
-        transform:translateX(-50%) rotate(0deg);
-        filter:drop-shadow(0 0 4px rgba(0,0,0,.4));
+        transform:translate(-50%,-50%);
     }
 
 </style>
@@ -88,7 +81,7 @@
 
 <div id="map"></div>
 
-<!-- BOTÕES -->
+<!-- botões -->
 <div class="map-control">
     <button id="btnToggle3D" class="control-btn">3D</button>
     <button id="btnCenterUser" class="control-btn">📍</button>
@@ -113,84 +106,58 @@ const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 let map;
 let userMarker = null;
 let watchId = null;
-let currentHeading = 0;
 let useGyro = false;
+let currentHeading = 0;
 let is3D = false;
 let animating3D = false;
 
-const MAP_ID = "ebb7ca4503045feabc75b373";
-
-/* =====================================================
-   PERMISSÃO DO GIROSCÓPIO
-===================================================== */
-function enableGyroscope() {
-    if (window.DeviceOrientationEvent &&
-        typeof DeviceOrientationEvent.requestPermission === "function") {
-
-        DeviceOrientationEvent.requestPermission().then(res => {
-            if (res === "granted") {
-                useGyro = true;
-                window.addEventListener("deviceorientation", onGyro, true);
-            }
-        });
-
-    } else {
-        // Desktop ou Android sem permissão especial
-        useGyro = true;
-        window.addEventListener("deviceorientation", onGyro, true);
-    }
-}
-
-function onGyro(ev) {
-    if (!useGyro) return;
-
-    if (ev.alpha != null) {
-        currentHeading = ev.alpha;
-        rotateMarker(currentHeading);
-        map.setHeading(currentHeading);
-    }
-}
-
-/* =====================================================
-   ROTACIONA O MARCADOR
-===================================================== */
-function rotateMarker(deg) {
-    if (!userMarker) return;
-
-    const el = userMarker.getIcon().element;
-    if (!el) return;
-
-    const arrow = el.querySelector(".direction-arrow");
-    if (arrow) {
-        arrow.style.transform = `translateX(-50%) rotate(${deg}deg)`;
-    }
-}
-
-/* =====================================================
-   CRIA MARCADOR HTML
-===================================================== */
-function createHtmlMarker() {
+/* cria ponto azul oficial */
+function createBlueDot() {
     const wrap = document.createElement("div");
-    wrap.className = "marker-wrapper";
+    wrap.className = "gm-blue-dot-wrapper";
 
     const dot = document.createElement("div");
-    dot.className = "location-dot";
+    dot.className = "gm-blue-dot";
 
-    const arrow = document.createElement("div");
-    arrow.className = "direction-arrow";
+    const center = document.createElement("div");
+    center.className = "gm-blue-center";
 
+    dot.appendChild(center);
     wrap.appendChild(dot);
-    wrap.appendChild(arrow);
 
     return wrap;
 }
 
-/* =====================================================
-   INTERPOLAÇÃO SUAVE
-===================================================== */
+/* giroscópio */
+function enableGyro() {
+    if (window.DeviceOrientationEvent &&
+        typeof DeviceOrientationEvent.requestPermission === "function") {
+
+        DeviceOrientationEvent.requestPermission().then(res=>{
+            if (res === "granted") {
+                useGyro = true;
+                window.addEventListener("deviceorientation", onGyro);
+            }
+        });
+
+    } else {
+        useGyro = true;
+        window.addEventListener("deviceorientation", onGyro);
+    }
+}
+
+function onGyro(ev){
+    if (!useGyro) return;
+    if (ev.alpha != null) {
+        currentHeading = ev.alpha;
+        map.setHeading(currentHeading);
+    }
+}
+
+/* animação suave */
 function lerp(a,b,t){ return a+(b-a)*t; }
 
-function animateMarkerTo(marker,newPos,duration=500){
+function animateMarkerTo(marker,newPos,duration=450){
     const start = marker.getPosition();
     const sLat = start.lat();
     const sLng = start.lng();
@@ -200,97 +167,71 @@ function animateMarkerTo(marker,newPos,duration=500){
     const t0 = performance.now();
 
     function step(t){
-        const p = Math.min((t - t0) / duration, 1);
-        const lat = lerp(sLat, eLat, p);
-        const lng = lerp(sLng, eLng, p);
-
+        const p = Math.min((t-t0)/duration,1);
+        const lat = lerp(sLat,eLat,p);
+        const lng = lerp(sLng,eLng,p);
         marker.setPosition({lat,lng});
-
         if (p < 1) requestAnimationFrame(step);
     }
-
     requestAnimationFrame(step);
 }
 
-/* =====================================================
-   GPS
-===================================================== */
-function startLocation(){
-    if (!navigator.geolocation) {
-        console.log("Geolocalização não suportada.");
-        return;
-    }
+/* GPS */
+function startGPS(){
+    if (!navigator.geolocation) return;
 
-    const options = {
+    const opt = {
         enableHighAccuracy:true,
         timeout:10000,
         maximumAge:0
     };
 
     navigator.geolocation.getCurrentPosition(pos=>{
-        const {latitude,longitude} = pos.coords;
-        const c = {lat:latitude,lng:longitude};
+        const c = {lat:pos.coords.latitude,lng:pos.coords.longitude};
 
         map.setCenter(c);
-        map.setZoom(18);
 
         userMarker = new google.maps.Marker({
             map,
             position:c,
-            icon:{ element:createHtmlMarker() }
+            icon:{ element:createBlueDot() }
         });
 
-        watchId = navigator.geolocation.watchPosition(updateUserPosition,err=>{
-            console.log("Erro watch:",err);
-        },options);
+        watchId = navigator.geolocation.watchPosition(updateUser,()=>{},opt);
 
-    },err=>{
-        console.log("Erro inicial:",err);
-    },options);
+    },()=>{},opt);
 }
 
-function updateUserPosition(pos){
+function updateUser(pos){
     const c = new google.maps.LatLng(pos.coords.latitude,pos.coords.longitude);
-    animateMarkerTo(userMarker,c,400);
+    animateMarkerTo(userMarker,c);
     map.panTo(c);
 
     if (!useGyro && pos.coords.heading != null){
-        currentHeading = pos.coords.heading;
-        rotateMarker(currentHeading);
-        map.setHeading(currentHeading);
+        map.setHeading(pos.coords.heading);
     }
 }
 
-/* =====================================================
-   BOTÃO CENTRALIZAR
-===================================================== */
-function centerOnUser(){
+/* centralizar */
+function centerUser(){
     if (!userMarker) return;
-    const p = userMarker.getPosition();
-    map.panTo(p);
-    map.setZoom(18);
+    map.panTo(userMarker.getPosition());
 }
+document.getElementById("btnCenterUser").onclick = centerUser;
 
-document.getElementById("btnCenterUser").onclick = centerOnUser;
-
-/* =====================================================
-   ANIMAÇÃO 2D / 3D
-===================================================== */
-function animateValue(start,end,duration,onUpdate,onFinish){
+/* 2D / 3D */
+function animateValue(start,end,dur,onUpdate,onFinish){
     const t0 = performance.now();
-
     function frame(t){
-        const p = Math.min((t-t0)/duration,1);
-        const v = start + (end-start)*p;
-        onUpdate(v);
+        const p = Math.min((t-t0)/dur,1);
+        onUpdate(start+(end-start)*p);
         if (p < 1) requestAnimationFrame(frame);
         else if (onFinish) onFinish();
     }
-
     requestAnimationFrame(frame);
 }
 
-document.getElementById("btnToggle3D").onclick = () => {
+document.getElementById("btnToggle3D").onclick = ()=>{
     if (animating3D) return;
     animating3D = true;
 
@@ -300,7 +241,7 @@ document.getElementById("btnToggle3D").onclick = () => {
 
         animateValue(map.getTilt(),67,800,val=>map.setTilt(val));
         animateValue(map.getHeading(),45,800,val=>map.setHeading(val),
-            ()=>{ animating3D=false; });
+            ()=>animating3D=false);
 
     } else {
         is3D = false;
@@ -308,29 +249,24 @@ document.getElementById("btnToggle3D").onclick = () => {
 
         animateValue(map.getTilt(),0,800,val=>map.setTilt(val));
         animateValue(map.getHeading(),0,800,val=>map.setHeading(val),
-            ()=>{ animating3D=false; });
+            ()=>animating3D=false);
     }
 };
 
-/* =====================================================
-   INICIAR MAPA
-===================================================== */
+/* iniciar mapa */
 function initMap(){
     map = new google.maps.Map(document.getElementById("map"),{
         center:{lat:-23.55,lng:-46.63},
-        zoom:18,
-        mapId:MAP_ID,
+        zoom:17,
         tilt:0,
         heading:0,
-        gestureHandling:"greedy",
-        streetViewControl:false
+        mapId:"ebb7ca4503045feabc75b373",
+        gestureHandling:"greedy"
     });
 
-    enableGyroscope();
-    startLocation();
+    enableGyro();
+    startGPS();
 }
-
 </script>
-
 </body>
 </html>
